@@ -912,7 +912,7 @@ sub call_next {
     my ($self,@extra_args) = @_;
     my $comp = $self->fetch_next
         or error "call_next: no next component to invoke";
-    return $self->comp($comp, @{$self->current_args}, @extra_args);
+    return $self->comp({base_comp=>$self->request_comp}, $comp, @{$self->current_args}, @extra_args);
 }
 
 sub caller
